# gandalf

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/database/firestore/: config.py  error.py  service.py
app/gandalf/: router.py  server.py
app/itinerary/: api.py  error.py  model.py  prompt.py  prompt.yml  repository.py  schema.py  service.py
app/openai/: config.py  error.py  service.py
